--- a/Final Exam.ipynb
+++ b/Final Exam.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1345,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1346,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1347,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1348,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,10 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1349,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import copy\n",
     "\n",
     "class Cafeteria:\n",
@@ -389,7 +390,10 @@
     "        for order in self.orders:\n",
     "            if order.order_id == order_id:\n",
     "                self.orders.remove(order)\n",
-    "                self.menu[order.item]['quantity']+=order.quantity\n",
+    "                if order.item in self.menu:\n",
+    "                    self.menu[order.item]['quantity']+=order.quantity\n",
+    "                else:\n",
+    "                    self.menu[order.item] = {'description': None, 'price': order.price/(order.quantity*(1-(order.discount/100))), 'quantity': order.quantity, 'cafeteria': self.name}\n",
     "                return order.cancel()\n",
     "        raise ValueError(f\"Order {order_id} not found\")\n",
     "    \n",
@@ -459,10 +463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1350,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class Order:\n",
     "    class_counter=1\n",
     "    def __init__(self, cafeteria, customer_id, customer_type, item, quantity, price, discount=0):\n",
@@ -473,6 +478,7 @@
     "        self.item = item\n",
     "        self.quantity = quantity\n",
     "        self.price = price*quantity*(1-(discount/100))\n",
+    "        self.discount = discount\n",
     "        #for simplicity, we assume all orders are accepted as the check is done before creating the order\n",
     "        self.status = \"Accepted\"\n",
     "        Order.class_counter+=1\n",
@@ -515,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1351,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1352,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -946,27 +952,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1353,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\danie\\anaconda3\\Lib\\tkinter\\__init__.py\", line 1968, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\danie\\AppData\\Local\\Temp\\ipykernel_29804\\1842671473.py\", line 499, in popular_items\n",
-      "    self.create_popular_items()\n",
-      "  File \"C:\\Users\\danie\\AppData\\Local\\Temp\\ipykernel_29804\\1842671473.py\", line 505, in create_popular_items\n",
-      "    Label(self.window, text=self.current_popular_items[self.current_popular_index]).pack()\n",
-      "                            ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "IndexError: list index out of range\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tkinter import *\n",
     "\n",
@@ -1146,6 +1134,8 @@
     "        for widget in self.window.winfo_children():\n",
     "            widget.destroy()\n",
     "        Label(self.window, text=\"Place Order\", font=(\"Arial\", 20)).pack()\n",
+    "        Label(self.window, text=f\"Current Balance: {self.current_customer.balance} DKK\").pack()\n",
+    "        Button(self.window, text=\"Add Balance\", command=self.add_balance).pack()\n",
     "        Label(self.window, text=\"Item\").pack()\n",
     "        self.current_item = Entry(self.window)\n",
     "        self.current_item.pack()\n",
@@ -1161,6 +1151,8 @@
     "        for widget in self.window.winfo_children():\n",
     "            widget.destroy()\n",
     "        Label(self.window, text=f\"Place Order for {item} at {cafeteria.name}\", font=(\"Arial\", 20)).pack()\n",
+    "        Label(self.window, text=f\"Current Balance: {self.current_customer.balance} DKK\").pack()\n",
+    "        Button(self.window, text=\"Add Balance\", command=self.add_balance).pack()\n",
     "        Label(self.window, text=f\"Available Quantity: {self.current_cafeteria.menu[item]['quantity']}\").pack()\n",
     "        Label(self.window, text=\"Quantity\").pack()\n",
     "        self.current_quantity = Entry(self.window)\n",
@@ -1219,7 +1211,21 @@
     "        Button(self.window, text=\"Back\", command=self.create_main_menu).pack()\n",
     "\n",
     "    def pick_up_order(self, order):\n",
-    "        message = self.current_customer.pick_up_order(order)\n",
+    "        message = self.current_customer.pick_up_order(order.order_id)\n",
+    "        self.view_orders_with_message(message)\n",
+    "        \n",
+    "    def view_orders_with_message(self, message):\n",
+    "        for widget in self.window.winfo_children():\n",
+    "            widget.destroy()\n",
+    "        Label(self.window, text=\"Orders\", font=(\"Arial\", 20)).pack()\n",
+    "        orders = self.current_customer.view_orders()\n",
+    "        for order in orders:\n",
+    "            frame = Frame(self.window)\n",
+    "            frame.pack()\n",
+    "            Label(frame, text=order).pack(side=LEFT)\n",
+    "            if order.status == \"Completed\":\n",
+    "                Button(frame, text=\"Pick-Up\", command=lambda order=order: self.pick_up_order(order)).pack(side=RIGHT)\n",
+    "        Button(self.window, text=\"Back\", command=self.create_main_menu).pack()\n",
     "        Label(self.window, text=message).pack()\n",
     "    \n",
     "    def add_balance(self):\n",
@@ -1310,6 +1316,7 @@
     "        Button(self.window, text=\"View & Complete Orders\", command=self.view_cafeteria_orders).pack()\n",
     "        Button(self.window, text=\"View & Edit Menu\", command=self.view_cafeteria_menu).pack()\n",
     "        Button(self.window, text=\"View Popular Items\", command=self.popular_items).pack()\n",
+    "        Button(self.window, text=\"View Revenue\", command=self.view_revenue).pack()\n",
     "        Button(self.window, text=\"Close Cafeteria\", command=self.close_cafeteria).pack()\n",
     "        Button(self.window, text=\"Back\", command=self.set_mode).pack()\n",
     "    \n",
@@ -1404,15 +1411,30 @@
     "                Button(frame, text=\"Cancel\", command=lambda order=order: self.cancel_order(order)).pack(side=RIGHT)\n",
     "        Button(self.window, text=\"Back\", command=lambda: self.cafeteria_administration(self.current_cafeteria)).pack()\n",
     "    \n",
+    "    def view_cafeteria_orders_with_status(self, message):\n",
+    "        for widget in self.window.winfo_children():\n",
+    "            widget.destroy()\n",
+    "        Label(self.window, text=\"Orders\", font=(\"Arial\", 20)).pack()\n",
+    "        orders = self.current_cafeteria.view_orders()\n",
+    "        for order in orders:\n",
+    "            frame = Frame(self.window)\n",
+    "            frame.pack()\n",
+    "            Label(frame, text=order).pack(side=LEFT)\n",
+    "            if order.status == \"Accepted\":\n",
+    "                Button(frame, text=\"Complete\", command=lambda order=order: self.complete_order(order)).pack(side=RIGHT)\n",
+    "                Button(frame, text=\"Cancel\", command=lambda order=order: self.cancel_order(order)).pack(side=RIGHT)\n",
+    "            elif order.status == \"Completed\":\n",
+    "                Button(frame, text=\"Cancel\", command=lambda order=order: self.cancel_order(order)).pack(side=RIGHT)\n",
+    "        Button(self.window, text=\"Back\", command=lambda: self.cafeteria_administration(self.current_cafeteria)).pack()\n",
+    "        Label(self.window, text=message).pack()\n",
+    "    \n",
     "    def complete_order(self, order):\n",
     "        message = self.current_cafeteria.complete_order(order.order_id)\n",
-    "        Label(self.window, text=message).pack()\n",
-    "        Button(self.window, text=\"Back\", command=lambda: self.view_cafeteria_orders()).pack()\n",
+    "        self.view_cafeteria_orders_with_status(message)\n",
     "    \n",
     "    def cancel_order(self, order):\n",
     "        message = self.current_cafeteria.cancel_order(order.order_id)\n",
-    "        Label(self.window, text=message).pack()\n",
-    "        Button(self.window, text=\"Back\", command=lambda: self.view_cafeteria_orders()).pack()\n",
+    "        self.view_cafeteria_orders_with_status(message)\n",
     "    \n",
     "    def add_item(self):\n",
     "        for widget in self.window.winfo_children():\n",
@@ -1466,27 +1488,41 @@
     "        Label(self.window, text=\"Popular Items\", font=(\"Arial\", 20)).pack()\n",
     "        self.current_popular_items = self.current_cafeteria.popular_items(5)\n",
     "        self.current_popular_index = 0\n",
-    "        self.create_popular_items()\n",
+    "        if not self.current_popular_items:\n",
+    "            Label(self.window, text=\"No popular items available.\").pack()\n",
+    "            Button(self.window, text=\"Back\", command=lambda: self.cafeteria_administration(self.current_cafeteria)).pack()\n",
+    "        else:\n",
+    "            self.create_popular_items()\n",
     "    \n",
     "    def create_popular_items(self):\n",
     "        for widget in self.window.winfo_children():\n",
     "            widget.destroy()\n",
     "        Label(self.window, text=\"Popular Items\", font=(\"Arial\", 20)).pack()\n",
-    "        Label(self.window, text=self.current_popular_items[self.current_popular_index]).pack()\n",
-    "        self.current_popular_items_label = Label(self.window, text=f\"{self.current_popular_index+1}/5\")\n",
+    "        item, popularity = self.current_popular_items[self.current_popular_index]\n",
+    "        self.current_popular_items_label = Label(self.window, text=f\"{item} - Popularity: {popularity}\")\n",
     "        self.current_popular_items_label.pack()\n",
+    "        self.current_popular_index_label = Label(self.window, text=f\"{self.current_popular_index+1}/{len(self.current_popular_items)}\")\n",
+    "        self.current_popular_index_label.pack()\n",
     "        self.current_popular_items_button = Button(self.window, text=\"Next\", command=self.next_popular_item)\n",
     "        self.current_popular_items_button.pack()\n",
-    "        Button(self.window, text=\"Back\", command=self.create_main_menu).pack()\n",
+    "        Button(self.window, text=\"Back\", command=lambda: self.cafeteria_administration(self.current_cafeteria)).pack()\n",
     "    \n",
     "    def next_popular_item(self):\n",
     "        self.current_popular_index += 1\n",
-    "        if self.current_popular_index == 5:\n",
+    "        if self.current_popular_index == len(self.current_popular_items):\n",
     "            self.current_popular_index = 0\n",
-    "        self.current_popular_items_label.config(text=f\"{self.current_popular_index+1}/5\")\n",
-    "        self.current_popular_items_label.config(text=self.current_popular_items[self.current_popular_index])\n",
+    "        item, popularity = self.current_popular_items[self.current_popular_index]\n",
+    "        self.current_popular_items_label.config(text=f\"{item} - Popularity: {popularity}\")\n",
+    "        self.current_popular_index_label.config(text=f\"{self.current_popular_index+1}/{len(self.current_popular_items)}\")\n",
+    "        self.current_popular_items_button.config(text=\"Next\")\n",
     "    \n",
-    "        \n",
+    "    def view_revenue(self):\n",
+    "        for widget in self.window.winfo_children():\n",
+    "            widget.destroy()\n",
+    "        Label(self.window, text=f\"Revenue of {self.current_cafeteria.name}\", font=(\"Arial\", 20)).pack()\n",
+    "        Label(self.window, text=f\"Current Revenue: {self.current_cafeteria.revenue} DKK\").pack()\n",
+    "        Button(self.window, text=\"Back\", command=lambda: self.cafeteria_administration(self.current_cafeteria)).pack()\n",
+    "    \n",
     "    def close_cafeteria(self):\n",
     "        for widget in self.window.winfo_children():\n",
     "            widget.destroy()\n",
@@ -1504,6 +1540,7 @@
     "        Label(self.window, text=f\"University: {self.university.name}\", font=(\"Arial\", 20)).pack()\n",
     "        Button(self.window, text=\"View Sorted Menu\", command=self.view_sorted_menu).pack()\n",
     "        if self.university_closed == False:\n",
+    "            Button(self.window, text=\"Simulate a Day\", command=self.simulate).pack()\n",
     "            Button(self.window, text=\"Close University\", command=self.close_university).pack()\n",
     "        else:\n",
     "            Button(self.window, text=\"Reopen University\", command=self.reopen_university).pack()\n",
@@ -1544,6 +1581,35 @@
     "            Label(frame, text=f\"{item_name} - {description} - Price: {price} DKK (Quantity: {quantity}) - Cafeteria: {cafeteria}\").pack(side=LEFT)\n",
     "        Button(self.window, text=\"Back\", command=self.university_view).pack()\n",
     "        \n",
+    "    def simulate(self):\n",
+    "        for widget in self.window.winfo_children():\n",
+    "            widget.destroy()\n",
+    "        Label(self.window, text=\"Simulate a Day\", font=(\"Arial\", 20)).pack()\n",
+    "        Label(self.window, text=\"Enter the number of orders possible per cafeteria (must be greater than 5):\").pack()\n",
+    "        self.orders_per_cafeteria = Entry(self.window)\n",
+    "        self.orders_per_cafeteria.pack()\n",
+    "        Button(self.window, text=\"Simulate\", command=self.simulate_action).pack()\n",
+    "        Button(self.window, text=\"Back\", command=self.university_view).pack()\n",
+    "    \n",
+    "    def simulate_action(self):\n",
+    "        try:\n",
+    "            orders = int(self.orders_per_cafeteria.get())\n",
+    "            if orders <= 5:\n",
+    "                raise ValueError(\"Number of orders must be greater than 5.\")\n",
+    "        except ValueError as e:\n",
+    "            Label(self.window, text=str(e)).pack()\n",
+    "            return\n",
+    "        \n",
+    "        for widget in self.window.winfo_children():\n",
+    "            widget.destroy()\n",
+    "        Label(self.window, text=\"Simulating a day...\", font=(\"Arial\", 20)).pack()\n",
+    "        cancelled_orders, completed_orders, successful_orders, failed_orders, _ = self.university.simulate_day(orders)\n",
+    "        Label(self.window, text=f\"Cancelled Orders: {cancelled_orders}\").pack()\n",
+    "        Label(self.window, text=f\"Completed Orders: {completed_orders}\").pack()\n",
+    "        Label(self.window, text=f\"Successful Orders: {successful_orders}\").pack()\n",
+    "        Label(self.window, text=f\"Failed Orders: {failed_orders}\").pack()\n",
+    "        Button(self.window, text=\"Back\", command=self.university_view).pack()\n",
+    "    \n",
     "    def close_university(self):\n",
     "        for widget in self.window.winfo_children():\n",
     "            widget.destroy()\n",
