Added script version

--- a/Final Exam.ipynb
+++ b/Final Exam.ipynb
@@ -186,8 +186,9 @@
    "outputs": [],
    "source": [
     "class Student(General_Customer):\n",
+    "    DISCOUNT=20\n",
     "    def __init__(self, name, student_id, university):\n",
-    "        super().__init__(name, student_id, university, \"Student\", 20)"
+    "        super().__init__(name, student_id, university, \"Student\", self.DISCOUNT)"
    ]
   },
   {
@@ -206,8 +207,9 @@
    "outputs": [],
    "source": [
     "class Staff(General_Customer):\n",
+    "    DISCOUNT=10\n",
     "    def __init__(self, name, staff_id, university):\n",
-    "        super().__init__(name, staff_id, university, \"Staff\", 10)"
+    "        super().__init__(name, staff_id, university, \"Staff\", self.DISCOUNT)"
    ]
   },
   {
@@ -1046,7 +1048,7 @@
    "source": [
     "#### Visual Interface\n",
     "\n",
-    "This goes beyond the scope but creates a fun environment. Please check out using student 865!"
+    "This goes beyond the scope but creates a fun environment. Feel free to check it out using student 865!"
    ]
   },
   {
@@ -1617,7 +1619,6 @@
     "        self.current_popular_index = 0\n",
     "        if not self.current_popular_items:\n",
     "            Label(self.window, text=\"No popular items available.\").pack()\n",
-    "            Button(self.window, text=\"Back\", command=lambda: self.cafeteria_administration(self.current_cafeteria)).pack()\n",
     "        else:\n",
     "            self.create_popular_items()\n",
     "    \n",
@@ -1757,10 +1758,22 @@
     "        Label(self.window, text=\"University is now open.\").pack()\n",
     "        Button(self.window, text=\"Back\", command=self.university_view).pack()\n",
     "\n",
-    "\n",
-    "\n",
-    " \n",
-    "# Test and use GUI    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test and Use the GUI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "upload_example_menus(university)\n",
     "testGUI = GUI(university)"
    ]
